changement logo pdf

--- a/app/views/pages/travel.pdf.erb
+++ b/app/views/pages/travel.pdf.erb
@@ -16,7 +16,7 @@
   </style>
 </head>
 <body>
-<img src="<%= image_url "logo.png" %>" width="200"/>
+<img src="<%= image_url "logo-black.png" %>" width="200"/>
   <div>
     <h1><%= @travel.destination %></h1>
   </div>
