--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,7 +1,7 @@
 .btn-card-destination {
   border-radius: 8px;
   color: whitesmoke;
-  background-color: #F89821;
+  background-color: #000000;
   margin-top: 5px;
   padding: 7px;
   text-decoration: none;
