--- a/app/assets/stylesheets/pages/loader1.scss
+++ b/app/assets/stylesheets/pages/loader1.scss
@@ -10,8 +10,8 @@ body {
   font-family: "Raleway", sans-serif;
 
   --black: #242424;
-  --white: #f5f5f5;
-  --pill: #e0d4be;
+  --white: #ffffff;
+  --pill: #ffffff;
   --red: #cc033f;
 }
 
