--- a/app/views/shared/labels/_season_label.html.erb
+++ b/app/views/shared/labels/_season_label.html.erb
@@ -1,22 +1,22 @@
 <div class="d-flex align-items-center justify-content-between">
   <% if item == "automn" %>
      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.1)), url(<%= image_path "carousel/season/automn.png"%>)">
-      Automne
+      <p class="ms-3 mb-4">Automne</p>
     </div>
 
   <% elsif item == "winter" %>
     <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.1)), url(<%= image_path "carousel/season/winter.png"%>)">
-      Hiver
+      <p class="ms-3 mb-4">Hiver</p>
     </div>
 
   <% elsif item == "spring" %>
     <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.1)), url(<%= image_path "carousel/season/spring.png"%>)">
-      Printemps
+      <p class="ms-3 mb-4">Printemps</p>
     </div>
 
   <% else %>
     <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.1)), url(<%= image_path "carousel/season/summer.png"%>)">
-      Eté
+      <p class="ms-3 mb-4">Eté</p>
     </div>
   <% end %>
 </div>
