--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -55,17 +55,15 @@
 .card-category {
   background-size: cover;
   background-position: center;
-  height: 200px;
-  width: 200px;
+  height: 355px;
+  width: 300px;
   display: flex;
-  justify-content: center;
-  align-items: center;
   color: white;
   font-size: 24px;
   font-weight: bold;
+  justify-content: flex-start;
+  align-items: flex-end;
   // text-shadow: 2px 2px 10px rgba(0,0,0,0.6);
-  border-radius: 7px;
-  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.55);
 }
 
 .homecard {
