--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -13,4 +13,6 @@
 @import"modal";
 @import "navbar";
 @import "sandbox";
-@import "vertical_timeline"
+@import "vertical_timeline";
+@import "text"
+
