--- a/app/views/shared/_form1.html.erb
+++ b/app/views/shared/_form1.html.erb
@@ -1,12 +1,12 @@
-<div class="">
+<div class="carousel-bg-color">
   <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000000">
     <%= simple_form_for travel, url: search_path, html: { class: 'my-form-class mt-5', data: { action: "submit->loader#loading" }} do |f| %>
-      <button class="carousel-control-prev carouselprevious carousel-dark" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+      <button class="carousel-control-prev carouselprevious" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
         <span class="carousel-control-prev-icon btn-card-destination" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
       </button>
 
-      <button class="carousel-control-next carouselnext carousel-dark" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+      <button class="carousel-control-next carouselnext" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
         <span class="carousel-control-next-icon btn-card-destination" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
@@ -20,8 +20,8 @@
 
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <div class="d-flex align-items-center justify-content-bottom bg-white rounded h-100 flex-column">
-            <div class="questionform w-100">
+          <div class="d-flex align-items-center justify-content-bottom rounded h-100 flex-column">
+            <div class="questionform w-100 text-white mb-3">
               <h3>Déterminez votre budget</h3>
             </div>
               <%= f.input :budget, as: :radio_buttons, legend: false, collection: ['< 500 €', 'de 500 € à 1 000 €', '> 1 000 €'], label_method: lambda { |item| render "shared/labels/budget_label", item: item  }, input_html: { class: "d-none category-selector" }, wrapper_html: { class: "" } %>
@@ -29,8 +29,8 @@
         </div>
 
         <div class="carousel-item rounded">
-          <div class="d-flex align-items-center justify-content-center bg-white rounded h-100 flex-column">
-            <div class="questionform p-3 w-100">
+          <div class="d-flex align-items-center justify-content-bottom rounded h-100 flex-column">
+            <div class="questionform w-100 text-white mb-3">
               <h3>Combien de temps souhaitez-vous voyager ?</h3>
             </div>
             <%= f.input :duration, as: :radio_buttons, legend: false, collection: ['week-end', '1 semaine', '2 semaines'], label_method: lambda { |item| render "shared/labels/duration_label", item: item  }, input_html: { class: "d-none category-selector" }, wrapper_html: { class: "d-flex align-items-center justify-content-between" } %>
@@ -38,8 +38,8 @@
         </div>
 
         <div class="carousel-item rounded">
-          <div class="d-flex align-items-center justify-content-center bg-white rounded h-100 flex-column">
-            <div class="questionform p-3 w-100">
+          <div class="d-flex align-items-center justify-content-bottom rounded h-100 flex-column">
+            <div class="questionform w-100 text-white mb-3">
               <h3>Avec qui voyagez-vous ?</h3>
             </div>
             <%= f.input :travelers, as: :radio_buttons, legend: false, collection: ['solo', 'couple', 'famille'], label_method: lambda { |item| render "shared/labels/traveler_type_label", item: item  }, input_html: { class: "d-none category-selector" }, wrapper_html: { class: "d-flex align-items-center justify-content-between" } %>
@@ -47,8 +47,8 @@
         </div>
 
         <div class="carousel-item rounded">
-          <div class="d-flex align-items-center justify-content-center bg-white rounded h-100 flex-column">
-            <div class="questionform p-3 w-100">
+          <div class="d-flex align-items-center justify-content-bottom rounded h-100 flex-column">
+            <div class="questionform w-100 text-white mb-3">
               <h3>Où souhaitez-vous partir ?</h3>
             </div>
             <%= f.input :type, as: :radio_buttons, legend: false, collection: ['ville', 'plage', 'montagne'], label_method: lambda { |item| render "shared/labels/destination_type_label", item: item  }, input_html: { class: "d-none category-selector" }, wrapper_html: { class: "d-flex align-items-center justify-content-between" } %>
@@ -56,8 +56,8 @@
         </div>
 
         <div class="carousel-item rounded position-relative">
-          <div class="d-flex align-items-center justify-content-center bg-white rounded h-100 flex-column">
-            <div class="questionform p-3 w-100">
+          <div class="d-flex align-items-center justify-content-bottom rounded h-100 flex-column">
+            <div class="questionform w-100 text-white mb-3">
               <h3>A quelle période souhaitez-vous partir ?</h3>
             </div>
             <%= f.input :season, as: :radio_buttons, legend: false, collection: ['winter', 'spring', 'summer', 'automn'], label_method: lambda { |item| render "shared/labels/season_label", item: item  }, input_html: { class: "d-none category-selector" }, wrapper_html: { class: "d-flex align-items-center justify-content-between" } %>
