--- a/app/assets/stylesheets/pdf_styles.scss.erb
+++ b/app/assets/stylesheets/pdf_styles.scss.erb
@@ -1,3 +1,25 @@
+.logo {
+  width: 100px;
+  height: auto;
+}
+
+.logo-container {
+  position: fixed;
+  left: 10px;
+  bottom: 10px;
+}
+
+.pdf-title {
+  font-size: 20px;
+  margin-top: 100px;
+  margin-bottom: 70px;
+  font-family: $ledger-font;
+}
+
+.card-trip {
+  margin-left: auto;
+  margin-right: auto;
+}
 
 .card-trip-activities {
   display: flex;
@@ -9,27 +31,25 @@
   align-items: center;
   margin-bottom: 20px;
   padding: 10px;
-  border: 1px solid #ccc;
+  font-size: 30px;
 }
 
 .card-title {
-  background-color: #f1f1f1;
-  color: #333;
+  color: white;
   padding: 5px 10px;
   margin: 0;
+  font-family: $ledger-font;
+  background-color: #030922;
 }
+
 
 .card-description {
-  margin-left: 20px;
+  margin-left: 10px;
+  font-family: $barlow-font;
+  font-size: 20px;
 }
 
-.logo-container {
-  position: fixed;
-  left: 10px;
-  bottom: 10px;
-}
-
-.logo {
-  width: 100px;
-  height: auto;
+.pdf-map {
+  margin-left: auto;
+  margin-right: auto;
 }
