--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -32,7 +32,7 @@
   border: 1px solid white;
 
   &:hover {
-    color: black;
+    color: #030922;
     background-color: #fff;
     // opacity: 1;
   }
@@ -43,7 +43,7 @@
   text-align: center;
   color: white;
   background-color: transparent;
-  padding: 20px;
+  padding: 10px;
   text-decoration: none;
   font-family: $ledger-font;
   transition: all 0.5s;
@@ -53,7 +53,7 @@
   margin: 0 auto;
 
   &:hover {
-    color: black;
+    color: #030922;
     background-color: #fff;
     // opacity: 1;
   }
