--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -104,8 +104,9 @@
 }
 
 .cardInfo h3 {
-  font-family: "raleway-font";
+  font-family: $barlow-font;
   font-size: 36px;
   font-weight: 700;
   text-shadow: rgba(0, 0, 0, 0.5) 0 10px 10px;
 }
+
