--- a/app/assets/stylesheets/pdf_styles.scss.erb
+++ b/app/assets/stylesheets/pdf_styles.scss.erb
@@ -13,7 +13,7 @@
   font-size: 20px;
   margin-top: 100px;
   margin-bottom: 70px;
-  font-family: $ledger-font;
+  font-family: 'Ledger', serif;;
 }
 
 .card-trip {
@@ -38,14 +38,14 @@
   color: white;
   padding: 5px 10px;
   margin: 0;
-  font-family: $ledger-font;
+  font-family: 'Ledger', serif;
   background-color: #030922;
 }
 
 
 .card-description {
   margin-left: 10px;
-  font-family: $barlow-font;
+  font-family: 'Barlow Semi Condensed', sans-serif;
   font-size: 20px;
 }
 
