salut les merlus

--- a/app/assets/stylesheets/pdf_styles.scss.erb
+++ b/app/assets/stylesheets/pdf_styles.scss.erb
@@ -1,4 +1,4 @@
-.logo {
+<%# .logo {
   width: 100px;
   height: auto;
 }
@@ -52,4 +52,4 @@
 .pdf-map {
   margin-left: auto;
   margin-right: auto;
-}
+} %>
