--- a/app/views/travels/show.html.erb
+++ b/app/views/travels/show.html.erb
@@ -58,8 +58,9 @@
               <div class="p-4">
                 <% if index == 0  %>
                 <p class="h2"> Jour <%= i + 1%></p>
+                <p class="h4 mt-4">Matin</p>
                 <% else %>
-                <p class="h2">Aprés-midi</p>
+                <p class="h4">Après-midi</p>
                 <% end %>
                 <p class="border-top border-white pt-3 mt-3"><%= activity.localisation %></p>
                 <p><%= activity.description %></p>
