page destination orga cards

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,6 +1,6 @@
 <div class="footer">
   <div class="footer-links">
-    <a href="https://github.com/chaisebasse/TravelFlex"><i class="fab fa-github"></i></a>
+    <a href="https://github.com/chaisebasse/TravelFlex"><i class="fa-brands fa-github" style="color: #ffffff;"></i></a>
     <a href="https://www.routard.com/"><i class="fab fa-instagram"></i></a>
     <a href="https://fr.bebee.com/bee/martin-boulland"><i class="fab fa-facebook"></i></a>
     <a href="https://kitt.lewagon.com/camps/1211/classmates_game"><i class="fab fa-twitter"></i></a>
