--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -16,8 +16,7 @@
   align-items: center;
 }
 .footer-links a {
-  color: black;
-  opacity: 0.15;
+  color: white;
   text-decoration: none;
   font-size: 24px;
   padding: 0px 10px;
@@ -25,6 +24,3 @@
 .footer-links a:hover {
   opacity: 1;
 }
-// .footer .fa-heart {
-//   color: #D23333;
-// }
