--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -55,21 +55,28 @@
 .card-category {
   background-size: cover;
   background-position: center;
-  height: 355px;
-  width: 300px;
+  height: 300px;
+  width: 270px;
   display: flex;
   color: white;
   font-size: 24px;
   font-weight: bold;
   justify-content: flex-start;
   align-items: flex-end;
-  // text-shadow: 2px 2px 10px rgba(0,0,0,0.6);
+  transition: all ease-in-out 0.3s;
+  p {
+    font-family: $barlow-font;
+  }
 }
 
 .homecard {
+  form {
+    display: flex;
+    align-items: flex-end;
+  }
   background-color: transparent;
   // border-bottom: 1px solid white;
-  margin: 30px;
+  margin: 30px 0px;
 }
 
 
