--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -1,58 +1,56 @@
-<div data-controller="loader">
-  <div data-loader-target="loader2">
+<div data-controller="loader" class="h-100">
+  <div data-loader-target="loader2" class="pb-4 pt-3">
     <%= render "shared/form1", travel: @travel %>
+    <div class="d-none" data-loader-target="loader">
+      <div class="page-wrap" data-controller="burger">
+        <main>
+          <article id="hero-1" style="--i: 5">
+            <div class="hero-info">
+              <h2 data-burger-target="heroText">Nous Construisons Votre Voyage</h2>
+              <h1 data-burger-target="heroText">Sur Mesure</h1>
+              <h3 data-burger-target="heroText">Lago di Braies, Italie</h3>
+            </div>
+            <div class="hero-image hi-1"></div>
+          </article>
 
-    <div class="d-none" data-loader-target="loader" >
-   <div class="page-wrap" data-controller="burger">
-    <main>
-      <article id="hero-1" style="--i: 5">
-        <div class="hero-info">
-          <h2 data-burger-target="heroText">Nous Construisons Votre Voyage</h2>
-          <h1 data-burger-target="heroText">Sur Mesure</h1>
-          <h3 data-burger-target="heroText">Lago di Braies, Italie</h3>
-        </div>
-        <div class="hero-image hi-1"></div>
-      </article>
+          <article id="hero-2" style="--i: 4">
+            <div class="hero-info">
+              <h2 data-burger-target="heroText"></h2>
+              <h1 data-burger-target="heroText">Laissez Vous Inspirer</h1>
+              <h3 data-burger-target="heroText">Marignier, France</h3>
+            </div>
+            <div class="hero-image hi-2"></div>
+          </article>
 
-      <article id="hero-2" style="--i: 4">
-        <div class="hero-info">
-          <h2 data-burger-target="heroText"></h2>
-          <h1 data-burger-target="heroText">Laissez Vous Inspirer</h1>
-          <h3 data-burger-target="heroText">Marignier, France</h3>
-        </div>
-        <div class="hero-image hi-2"></div>
-      </article>
+          <article id="hero-3" style="--i: 3">
+            <div class="hero-info">
+              <h2 data-burger-target="heroText">Vers De Nouveaux</h2>
+              <h1 data-burger-target="heroText">Horizons</h1>
+              <h3 data-burger-target="heroText">Hooker Valley Track, Nouvelle-Zélande</h3>
+            </div>
+            <div class="hero-image hi-3"></div>
+          </article>
 
-      <article id="hero-3" style="--i: 3">
-        <div class="hero-info">
-          <h2 data-burger-target="heroText">Vers De Nouveaux</h2>
-          <h1 data-burger-target="heroText">Horizons</h1>
-          <h3 data-burger-target="heroText">Hooker Valley Track, Nouvelle-Zélande</h3>
-        </div>
-        <div class="hero-image hi-3"></div>
-      </article>
+          <article id="hero-4" style="--i: 2">
+            <div class="hero-info">
+              <h2 data-burger-target="heroText">Explorez</h2>
+              <h1 data-burger-target="heroText">Le Monde</h1>
+              <h3 data-burger-target="heroText">Dolomites, Italie</h3>
+            </div>
+            <div class="hero-image hi-4"></div>
+          </article>
 
-      <article id="hero-4" style="--i: 2">
-        <div class="hero-info">
-          <h2 data-burger-target="heroText">Explorez</h2>
-          <h1 data-burger-target="heroText">Le Monde</h1>
-          <h3 data-burger-target="heroText">Dolomites, Italie</h3>
-        </div>
-        <div class="hero-image hi-4"></div>
-      </article>
-
-      <article id="hero-5" style="--i: 1">
-        <div class="hero-info">
-          <h2 data-burger-target="heroText">Changez Vos</h2>
-          <h1 data-burger-target="heroText">Perspectives</h1>
-          <h3 data-burger-target="heroText">Phuket, Thaïlande</h3>
-        </div>
-        <div class="hero-image hi-5"></div>
-      </article>
-    </main>
-
-      </header>
-    </div>
+          <article id="hero-5" style="--i: 1">
+            <div class="hero-info">
+              <h2 data-burger-target="heroText">Changez Vos</h2>
+              <h1 data-burger-target="heroText">Perspectives</h1>
+              <h3 data-burger-target="heroText">Phuket, Thaïlande</h3>
+            </div>
+            <div class="hero-image hi-5"></div>
+          </article>
+        </main>
+        </header>
+      </div>
     </div>
   </div>
- </div>
+</div>
