--- a/app/assets/stylesheets/components/_text.scss
+++ b/app/assets/stylesheets/components/_text.scss
@@ -4,9 +4,9 @@
 letter-spacing: .01rem;
 margin-top: 0;
 margin-bottom: 0;
-font-size: 2.14813rem;
+font-size: 24px;
 font-weight: 400;
-line-height: 1;
+line-height: 34px;
 }
 
 
