--- a/app/views/shared/_form1.html.erb
+++ b/app/views/shared/_form1.html.erb
@@ -1,6 +1,6 @@
 <div class="carousel-bg-color">
   <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000000">
-    <%= simple_form_for travel, url: search_path, html: { class: 'my-form-class mt-5', data: { action: "submit->loader#loading" }} do |f| %>
+    <%= simple_form_for travel, url: search_path, html: { class: 'my-form-class mt-4', data: { action: "submit->loader#loading" }} do |f| %>
       <button class="carousel-control-prev carouselprevious" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
         <span class="carousel-control-prev-icon btn-card-destination" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
@@ -13,7 +13,7 @@
 
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <div class="d-flex align-items-center justify-content-bottom rounded h-100 flex-column">
+          <div class="loader-wrap justify-content-center d-flex align-items-center justify-content-bottom rounded h-100 flex-column">
             <div class="questionform w-100 text-white mb-3">
               <h3>Déterminez votre budget</h3>
             </div>
@@ -22,7 +22,7 @@
         </div>
 
         <div class="carousel-item rounded">
-          <div class="d-flex align-items-center justify-content-bottom rounded h-100 flex-column">
+          <div class="loader-wrap justify-content-center d-flex align-items-center justify-content-bottom rounded h-100 flex-column">
             <div class="questionform w-100 text-white mb-3">
               <h3>Combien de temps souhaitez-vous voyager ?</h3>
             </div>
@@ -31,7 +31,7 @@
         </div>
 
         <div class="carousel-item rounded">
-          <div class="d-flex align-items-center justify-content-bottom rounded h-100 flex-column">
+          <div class="loader-wrap justify-content-center d-flex align-items-center justify-content-bottom rounded h-100 flex-column">
             <div class="questionform w-100 text-white mb-3">
               <h3>Avec qui voyagez-vous ?</h3>
             </div>
@@ -40,7 +40,7 @@
         </div>
 
         <div class="carousel-item rounded">
-          <div class="d-flex align-items-center justify-content-bottom rounded h-100 flex-column">
+          <div class="loader-wrap justify-content-center d-flex align-items-center justify-content-bottom rounded h-100 flex-column">
             <div class="questionform w-100 text-white mb-3">
               <h3>Où souhaitez-vous partir ?</h3>
             </div>
@@ -49,12 +49,12 @@
         </div>
 
         <div class="carousel-item rounded">
-          <div class="d-flex align-items-center justify-content-bottom rounded h-100 flex-column position-relative">
+          <div class="loader-wrap justify-content-center d-flex align-items-center justify-content-bottom rounded h-100 flex-column position-relative">
             <div class="questionform w-100 text-white mb-3">
-              <h3>A quelle période souhaitez-vous partir ?</h3>
+              <h3>À quelle période souhaitez-vous partir ?</h3>
             </div>
             <%= f.input :season, as: :radio_buttons, legend: false, collection: ['winter', 'spring', 'summer', 'automn'], label_method: lambda { |item| render "shared/labels/season_label", item: item  }, input_html: { class: "d-none category-selector" }, wrapper_html: { class: "d-flex align-items-center justify-content-between" } %>
-            <div class="d-flex align-items-center justify-content-center mt-4 w-100 position-absolute" style="bottom: -50px;">
+            <div class="d-flex align-items-center justify-content-center mt-4 w-100 position-absolute" style="bottom: -10px;">
               <%= f.submit "Voyager !", class: 'btn-home-one px-4 py-2' %>
             </div>
           </div>
