Front last fixes

--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -5,10 +5,11 @@
 
 .modal-title {
   color: white;
-  display: flex; 
+  display: flex;
   align-content:baseline;
   font-weight: bold;
   font-family: $ledger-font;
+  font-size: 50px;
 }
 
 .modal-dialog p {
