--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,5 +1,5 @@
 .cardContainer {
-  padding: 40px 80px;
+  padding: 0px 80px 40px 80px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
