--- a/app/views/pages/destinations.html.erb
+++ b/app/views/pages/destinations.html.erb
@@ -1,5 +1,5 @@
-<div class="container mt-2">
-  <div class="row rowalign-item-center justify-content-center">
+<div class="container mt-5 pt-3">
+  <div class="row rowalign-item-center justify-content-center mt-5">
     <% JSON.parse(@scraping_destination.content).each do |num_desti, destination| %>
       <div class="cardContainer col-4">
         <button class="btn" data-bs-toggle="modal" data-bs-target="#myModal<%= num_desti %>">
